<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor1"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"/>
    <TextView
        android:id="@+id/title"
        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/subtitle"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/subtitle"
        android:textSize="22sp"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/dev_name"
        android:textSize="5sp"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal"/>

</RelativeLayout>