<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="100dp"
    android:background="@color/mainColor1">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"/>
    <TextView
        android:id="@+id/title"
        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>
    <Button
        android:id="@+id/con_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_margin="10dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/ins_button"
        android:background="@drawable/border_radius_bg_white"
        android:textColor="@color/declination7"
        android:textSize="16sp"
        android:text="@string/connexion"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/ins_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border_radius_bg_d4"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/inscription"
        android:textStyle="bold"/>
</RelativeLayout>