<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionActivity"
    android:background="@color/mainColor1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/go_back_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="25dp"
                android:background="@drawable/fleche"/>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo"/>
            <TextView
                android:id="@+id/title"
                android:layout_below="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ins_title"
                android:textSize="50sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/ins_subtitle"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subtitle"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:text="@string/ins_username"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_username"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_username"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:text="@string/ins_password"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_passwortd"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/confirm_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_passwortd"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:text="@string/ins_confirm_password"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_confirm_pwd"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirm_pwd"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_confirm_pwd"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:text="@string/ins_mail_adress"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/confirm_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_email"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:text="@string/ins_confirm_mail_adress"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_confirm_email"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirm_email"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword"
                android:background="@color/white"/>

            <Button
                android:id="@+id/ins_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/et_confirm_email"
                android:background="@drawable/border_radius_bg_d4"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/inscription"
                android:textStyle="bold"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>