<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectionActivity"
    android:background="@color/mainColor1">


    <Button
        android:id="@+id/go_back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/fleche"/>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"/>
    <TextView
        android:id="@+id/title"
        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/con_title"
        android:textSize="50sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/title"
        android:layout_marginTop="120dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:inputType="text"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/et_username"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:background="@color/white"/>

</RelativeLayout>